<resources>
    <string name="app_name">UTSA Day</string>
    <string name="click_here">Click here</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="quizzes">Quizzes</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="continue_quiz">Continue</string>
    <string name="next">Next</string>
    <string name="welcome_to">Welcome to</string>
    <string name="dot">.</string>
    <string name="welcome">Welcome</string>
    <string name="utsa_day">UTSA Day</string>
    <string name="how_much_do_you_know_about_computer_science">How much do you know about Computer Science?</string>
    <string name="points">20 pts</string>
    <string name="enter_name">Please enter your name:</string>
    <string name="enter_name_edit">Enter name</string>
    <string name="language">Español</string>

    <string name="hardware_quiz_title">Hardware Quiz</string>
    <string-array name="general_UTSA_Day_hardware_questions_array">
        <item>What is the most basic unit of information in a computer?</item>
        <item>Which of the following is NOT a part of a personal computer?</item>
        <item>Which manufacturer makes GPUs for personal computers?</item>
        <item>Which of these is NOT a way to wirelessly connect devices?</item>
    </string-array>


    <string-array name="general_UTSA_Day_hardware_answers_array">
        <item>Byte</item>
        <item>Kilobyte</item>
        <item>Pixel</item>
        <item>Megahertz</item>

        <item>USB Drive</item>
        <item>CPU</item>
        <item>RAM</item>
        <item>CMOS Battery</item>

        <item>Nvidia</item>
        <item>Skibidi</item>
        <item>Samsung</item>
        <item>Microsoft</item>

        <item>Thunderbolt</item>
        <item>Bluetooth</item>
        <item>Wi-Fi</item>
        <item>Zigbee</item>

    </string-array>


    <string name="development_quiz_title">Development Quiz</string>
    <string-array name="general_UTSA_Day_development_questions_array">
        <item>What is the process of converting a high level programming language into machine code that the computer can understand?</item>
        <item>Which of these is NOT a programming language?</item>
        <item>What are the Python libraries Pandas and NumPy used for?</item>
        <item>Which of these is NOT a real operating system?</item>
    </string-array>

    <string-array name="general_UTSA_Day_development_answers_array">
        <item>Compiling</item>
        <item>Debugging</item>
        <item>Scripting</item>
        <item>Running</item>

        <item>Snowflake</item>
        <item>C#</item>
        <item>Java</item>
        <item>Python</item>

        <item>Data Science and Machine Learning</item>
        <item>Web games</item>
        <item>Secure transfer of files</item>
        <item>Benchmarking</item>

        <item>JavaOS</item>
        <item>Ubuntu</item>
        <item>Windows 95</item>
        <item>Arch Linux</item>
    </string-array>

    <string name="languages_quiz_title">Programming Languages Quiz</string>
    <string-array name="general_UTSA_Day_languages_questions_array">
        <item>What does the acronym HTTP stand for?</item>
        <item>What is the symbol used to denote comments in a Python program?</item>
        <item>Which programming language is primarily used for web development?</item>
        <item>Who developed the language COBOL and the first ever compiler?</item>
    </string-array>

    <string-array name="general_UTSA_Day_languages_answers_array">
        <item>Hyper Text Transfer Protocol</item>
        <item>High Tech Technical Platform</item>
        <item>Home Textual Terminal Program</item>
        <item>Hidden Technical Transfer Protocol</item>

        <item>#</item>
        <item>//</item>
        <item>/* */</item>
        <item>{comment in curly braces}</item>

        <item>JavaScript</item>
        <item>C++</item>
        <item>HTML</item>
        <item>Rust</item>

        <item>Grace Hopper</item>
        <item>Margaret Hamilton</item>
        <item>Ada Lovelace</item>
        <item>Katherine Johnson</item>
    </string-array>

    <string name="misc_quiz_title">Misc Quiz</string>
    <string-array name="general_UTSA_Day_misc_questions_array">
        <item>What is the binary equivalent of the decimal number 9?</item>
        <item>What is a two-factor authentication (2FA) for?</item>
        <item>What kind of attack fakes being a legitimate website to steal user information?</item>
        <item>What was Alan Turing known for?</item>
    </string-array>

    <string-array name="general_UTSA_Day_misc_answers_array">
        <item>1001</item>
        <item>11</item>
        <item>01100110</item>
        <item>1100</item>

        <item>Verifying your identity beyond just a password</item>
        <item>Strengthening your Wi-Fi signal</item>
        <item>Increasing your internet speed</item>
        <item>Making sure your PC doesn’t have a virus</item>

        <item>Phishing Attack</item>
        <item>Trojan</item>
        <item>Macro</item>
        <item>Spyware</item>

        <item>Breaking Nazi secret codes</item>
        <item>Inventing the transistor</item>
        <item>Developing the first Operating System</item>
        <item>Creating the first Neural Network</item>

    </string-array>

    <string name="utsa_day_quiz_title">UTSA Quiz</string>
    <string-array name="general_UTSA_Day_UTSA_questions_array">
        <item>How many students does UTSA have?</item>
        <item>When was UTSA founded?</item>
        <item>What is the Rowdy Statue of?</item>
        <item>What percent of students are the first generation in their family to attend a University?</item>
    </string-array>

    <string-array name="general_UTSA_Day_UTSA_answers_array">
        <item>35000</item>
        <item>24000</item>
        <item>19000</item>
        <item>8000</item>

        <item>1969</item>
        <item>1982</item>
        <item>1942</item>
        <item>1899</item>

        <item>Roadrunner</item>
        <item>Alamo</item>
        <item>UTSAs President</item>
        <item>Texas Star</item>

        <item>72%</item>
        <item>42%</item>
        <item>33%</item>
        <item>74%</item>


    </string-array>

</resources>